--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
     <!-- =========================================================== -->
     
     <script src="js/chart.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/chartjsenhancements.min.js"></script>
     <script src="js/papaparse.min.js"></script>
     <script src="js/chartjs-plugin-zoom.min.js"></script>
@@ -23,7 +24,7 @@
 <body>
     <div class="title-images"></div>
     <center>
-        <img src="img/title5.png" alt="Title 1">
+        <img src="img/white_bg_smaller.png" alt="Title 1">
     </center>
     </div>
 
@@ -38,7 +39,7 @@
       </select>
 
       <label for="codeInput">Codes:</label>
-      <textarea id="codeInput" rows="4" placeholder="Comma-separated list of codes (e.g. P0300)"></textarea>
+      <textarea id="codeInput" rows="4" placeholder="Comma-separated list of codes (e.g. P0300,P0301,P0302)"></textarea>
 
       <button onclick="lookupCode()">Search</button>
     </fieldset>
@@ -61,8 +62,10 @@
       </table>
     </fieldset>
   </div>
-
+   
   <script src="js/app.js"></script>
+  <div id="siteInfo" class="site-info" style="text-align: center; font-size: 0.9em; margin-top: 10px;"></div>
+
 </body>
 
 </html>
